# g_stream

./: .gitignore  .gitmodules  alias.sh  custom_rosdep.yaml  docker-compose.yml  env.sh  misb0601_packet.klv  readme.md  todo.md
.devcontainer/: Dockerfile  Dockerfile.arm.runtime  README.md  devcontainer.json
.github/workflows/: README.md  build.yml
scripts/: deploy.sh
src/g_stream/: CMakeLists.txt  README.md  package.xml
src/g_stream/config/: nvidia.yaml  nvidia_pc.yaml  stream.yaml  stream_pc_264.yaml  subset.yaml  test.yaml
src/g_stream/g_stream/: __init__.py  bfid.py  minimal_pipe.py  param_dump_manager.py  stream_node.py  stream_node_gst.py
src/g_stream/launch/: dev.yaml  dev_pc_264.yaml  dev_pc_264_control.yaml  dev_shm.yaml
src/g_stream/scripts/: data.py  gui.py  set_camera_info.py
src/g_stream/tests/: test_dynamic_params.py
src/g_stream/tools/: bfid.py  player2.py
src/g_stream_control/: CMakeLists.txt  README.md  package.xml  plugin.xml
src/g_stream_control/debian_scripts/: clean.sh
src/g_stream_control/g_stream_control/: rqt_demo.py  rqt_plugin.py
src/g_stream_control/resource/: Demo.ui
src/g_stream_interface/: CMakeLists.txt  README.md  package.xml
src/g_stream_interface/srv/: Preset.srv
tmux_scripts/: dev.yaml  nvidia.yaml
